# Computer-Vision-Library

./: .gitignore  CMakeLists.txt  demo.py  uwimg
src/: filter_image.c  process_image.c  resize_image.c
